# external-zkml-actor

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  out.msgpack  proof  vkey
client/: Cargo.toml
client/src/: main.rs
contract/: .binpath  Cargo.toml
contract/src/: io.rs  lib.rs
deps-override/: Cargo.toml
deps-override/getrandom-js/: Cargo.toml
deps-override/getrandom-wasm/: Cargo.toml
deps-override/getrandom-wasm/benches/: buffer.rs
deps-override/getrandom-wasm/src/: error.rs  error_impls.rs  js.rs  lib.rs
deps-override/getrandom-wasm/tests/common/: mod.rs
deps-override/halo2-client/halo2/: Cargo.toml
deps-override/halo2-client/halo2_gadgets/: Cargo.toml
deps-override/halo2-client/halo2_gadgets/src/: ecc.rs  poseidon.rs  sinsemilla.rs  utilities.rs
deps-override/halo2-client/halo2_proofs/: Cargo.toml
deps-override/halo2-client/halo2_proofs/examples/: cost-model.rs  (+1 more)
deps-override/halo2-wasm/halo2_gadgets/: Cargo.toml
deps-override/halo2-wasm/halo2_gadgets/src/: lib.rs  poseidon.rs  utilities.rs
deps-override/halo2-wasm/halo2_gadgets/src/poseidon/: pow5.rs  primitives.rs
deps-override/halo2-wasm/halo2_gadgets/src/poseidon/primitives/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs  test_vectors.rs
deps-override/halo2-wasm/halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
deps-override/halo2-wasm/halo2_proofs/: Cargo.toml
deps-override/halo2-wasm/halo2_proofs/benches/: arithmetic.rs  commit_zk.rs  dev_lookup.rs  fft.rs  hashtocurve.rs  plonk.rs
deps-override/halo2-wasm/halo2_proofs/examples/: circuit-layout.rs  cost-model.rs  serialization.rs  shuffle.rs  simple-example.rs  two-chip.rs  vector-mul.rs
deps-override/halo2-wasm/halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  io.rs  lib.rs  multicore.rs  os_rng.rs  plonk.rs  poly.rs  transcript.rs
deps-override/halo2-wasm/halo2_proofs/src/circuit/: floor_planner.rs  layouter.rs  value.rs
deps-override/halo2-wasm/halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
deps-override/halo2-wasm/halo2_proofs/src/circuit/floor_planner/v1/: strategy.rs
deps-override/halo2-wasm/halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  metadata.rs  util.rs
deps-override/halo2-wasm/halo2_proofs/src/dev/failure/: emitter.rs
deps-override/halo2-wasm/halo2_proofs/src/dev/graph/: layout.rs
deps-override/halo2-wasm/halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  keygen.rs  lookup.rs  permutation.rs  prover.rs  vanishing.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/plonk/circuit/: compress_selectors.rs
deps-override/halo2-wasm/halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/plonk/verifier/: batch.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs  multiopen_test.rs  query.rs  strategy.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/ipa/: commitment.rs  mod.rs  msm.rs  multiopen.rs  strategy.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/ipa/commitment/: prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/ipa/multiopen/: prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/kzg/: commitment.rs  mod.rs  msm.rs  multiopen.rs  strategy.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/kzg/multiopen/: gwc.rs  shplonk.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/kzg/multiopen/gwc/: prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/src/poly/kzg/multiopen/shplonk/: prover.rs  verifier.rs
deps-override/halo2-wasm/halo2_proofs/tests/: plonk_api.rs
deps-override/halo2-wasm/halo2curves/: Cargo.toml  build.rs
deps-override/halo2-wasm/halo2curves/benches/: less_than.rs
deps-override/halo2-wasm/halo2curves/src/: arithmetic.rs  lib.rs  pairing.rs  serde.rs
deps-override/halo2-wasm/halo2curves/src/bn256/: assembly.rs  curve.rs  engine.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
deps-override/halo2-wasm/halo2curves/src/derive/: curve.rs  field.rs  mod.rs
deps-override/halo2-wasm/halo2curves/src/pasta/: mod.rs
deps-override/halo2-wasm/halo2curves/src/secp256k1/: curve.rs  fp.rs  fq.rs  mod.rs
deps-override/halo2-wasm/halo2curves/src/tests/: curve.rs  field.rs  mod.rs
deps-override/zkml-client/: Cargo.toml
deps-override/zkml-client/src/: model.rs
deps-override/zkml-wasm/: Cargo.toml
deps-override/zkml-wasm/src/: layers.rs  lib.rs  model.rs
deps-override/zkml-wasm/src/commitments/: commit.rs  packer.rs  poseidon_commit.rs
deps-override/zkml-wasm/src/gadgets/: add_pairs.rs  adder.rs  bias_div_floor_relu6.rs  bias_div_round_relu6.rs  dot_prod.rs  gadget.rs  input_lookup.rs  max.rs  mul_pairs.rs  nonlinear.rs  sqrt_big.rs  square.rs  squared_diff.rs  sub_pairs.rs  update.rs  var_div.rs  var_div_big.rs  var_div_big3.rs
deps-override/zkml-wasm/src/gadgets/nonlinear/: exp.rs  logistic.rs  non_linearity.rs  pow.rs  relu.rs  rsqrt.rs  sqrt.rs  tanh.rs
deps-override/zkml-wasm/src/layers/: arithmetic.rs  averager.rs  avg_pool_2d.rs  batch_mat_mul.rs  conv2d.rs  dag.rs  div_fixed.rs  fully_connected.rs  layer.rs  logistic.rs  max_pool_2d.rs  mean.rs  noop.rs  pow.rs  rsqrt.rs  softmax.rs  sqrt.rs  square.rs  squared_diff.rs  tanh.rs  update.rs
deps-override/zkml-wasm/src/layers/arithmetic/: add.rs  div_var.rs  mul.rs  sub.rs
deps-override/zkml-wasm/src/layers/shape/: broadcast.rs  concatenation.rs  mask_neg_inf.rs  pack.rs  pad.rs  permute.rs  reshape.rs  resize_nn.rs  rotate.rs  slice.rs  split.rs  transpose.rs
deps-override/zkml-wasm/src/utils/: helpers.rs  loader.rs  mod.rs  proving_kzg.rs
external-actor-queue/: .binpath  Cargo.toml  LICENSE  README.md
external-actor-queue/src/: events.rs  io.rs  lib.rs  queue.rs  tests.rs
js-bindings/: Cargo.toml
js-bindings/src/: lib.rs
model/: alt_inp.msgpack
src/: main.rs
(+101 files in other folders)
