[package]
name = "external-ml-actor"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: Reference https://github.com/mertwole/gear-external-ml-actor-deps
zkml = { path = "../halo2_dbg/zkml" } # { git = "https://github.com/ddkang/zkml" }

gclient = { git = "https://github.com/gear-tech/gear" }
gear-core = { git = "https://github.com/gear-tech/gear" }
tokio = { version = "1.28.2", features = ["full"] }
external-actor-queue = { path = "./external-actor-queue" }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
serde = "1.0"
rmp-serde = "*"

# TODO: Reference https://github.com/mertwole/gear-external-ml-actor-deps
halo2_proofs = { path = "../halo2_dbg/halo2/halo2_proofs", features = ["circuit-params"] }# { git="https://github.com/privacy-scaling-explorations/halo2", package="halo2_proofs", rev="17e9765c199670534c0299c96128d0464a188d0b", features = ["circuit-params"] }

futures = "0.3.28"
rand = "0.8.5"
itertools = "*"

[patch.crates-io]
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-runtime = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }