[package]
name = "external-actor-queue"
version = "0.1.0"
build = "build.rs"

[dependencies]
halo2_proofs_wasm = { git = "https://github.com/mertwole/gear-external-ml-actor-deps", default-features = false, features = ["circuit-params"] }
halo2_gadgets_wasm = { git = "https://github.com/mertwole/gear-external-ml-actor-deps", default-features = false }
zkml-wasm = { git = "https://github.com/mertwole/gear-external-ml-actor-deps" }

gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gcore = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hashbrown = "0.13"
hex-literal = "*"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }

[features]
debug = ["gstd/debug"]
default = ["std"]
std = []
