[package]
name = "js-bindings"
version = "0.1.0"
authors = ["mertwole <mertwole@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
zkml_client = { path = "../deps-override/zkml-client" }
halo2_proofs_client = { path = "../deps-override/halo2-client/halo2_proofs", features = ["circuit-params"] }
rmp-serde = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[patch.crates-io]
getrandom = { path = "../deps-override/getrandom-js" }