[package]
name = "halo2curves_wasm"
version = "0.3.2"
authors = [
  "Sean Bowe <ewillbefull@gmail.com>",
  "Jack Grigg <jack@z.cash>",
  "Alex Vlasov <alex.m.vlasov@gmail.com>",
  "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/kilic/pairing"
readme = "README.md"
description = "Elliptic curve implementations and wrappers for halo2 library"

[[bench]]
name = "less_than"
harness = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3" }
bincode = "1.3.3"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5f1c499f26956901f21f3892b1593910fb09def6" }
no_std_io = "0.5"
subtle = { version = "2.4", default-features = false }
ff = { version = "0.13.0", default-features = false }
group = { version = "0.13.0", default-features = false }
pasta_curves = { version = "0.5.0", default-features = false, features = ["sqrt-table"] }
static_assertions = "1.1.0"
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
paste = { version = "1.0.11", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = [ "reexport" ]
asm = []
prefetch = []
print-trace = [ "ark-std/print-trace" ]
derive_serde = [ "serde/derive" ]
reexport = []

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
